fix: minor issues on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -253,7 +253,7 @@ ul li {
 
 h1 {
     font-family: "Geologica";
-    font-weight: 400;
+    font-weight: 900;
 }
 
 h2 {
